styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Arial', sans-serif;
    background-color: #1a1a1a;
    color: #fff;
}

.hero {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    background: radial-gradient(ellipse at top left, #013d5d 0%, rgba(0, 0, 0, 0) 50%);
}

h1 {
    font-size: 3rem;
    margin-bottom: 1rem;
}

.social-icons {
    display: flex;
    gap: 20px;
    margin-bottom: 20px;
}

.social-icons a {
    color: #fff;
    font-size: 1.5rem;
}

.social-icons a:hover {
    color: #ffa500; /* Orange color on hover */
}

.buttons {
    display: flex;
    gap: 20px;
    margin-bottom: 30px;
}
.buttons a:hover {
    color: #d0ce72;
}

.btn {
    padding: 10px 20px;
    border-radius: 30px;
    border: 2px solid #fff;
    color: #fff;
    font-size: 1rem;
    text-decoration: none;
    display: inline-block;
}

.resume-btn {
    background-color: transparent;
    border-color: #ffa500;
    color: #ffa500;
}

.scroll-down {
    font-size: 2rem;
    color: #fff;
}

.scroll-down a {
    color: #fff;
    font-size: 2rem;
    text-decoration: none;
}
.scroll-down a:hover {
    color: #ffa500; /* Change color on hover */
}

.about {
    padding: 50px;
    background-image: radial-gradient(ellipse at bottom left, #013d5d 0%, rgba(0, 0, 0, 0) 50%);
}

.about-content {
    display: flex;
    align-items: center;
    gap: 20px;
}

.profile-pic {
    width: 150px;
    border-radius: 50%;
}

.skills {
    background-image: radial-gradient(ellipse at top left, #013d5d 0%, rgba(0, 0, 0, 0) 50%);
    padding: 50px;
}

.skills h2 {
    color: #333;
}

.skills-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
}

.category {
    flex: 1;
    min-width: 250px;
}

.skill {
    margin-bottom: 20px;
}

.skill span {
    display: block;
    font-weight: bold;
}

.skill-bar {
    background-color: #ddd;
    border-radius: 5px;
    height: 8px;
}

.progress {
    height: 100%;
    background-color: #ffa500;
}
.technologies-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    justify-content: space-between;
}

.skill-item {
    display: flex;
    align-items: center;
    padding: 5px;
    border-radius: 15px;
    background-color: #ffffff; /* or white: ffffff, or gold ffd700, grey c0c0c0 */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 150px;
}

.skill-item img {
    width: 50px;
    height: 50px;
    margin-right: 15px;
}

.skill-item p {
    font-size: 1rem;
    font-weight: bold;
    color: #333;
    margin: 0;
}

.courses {
    padding: 50px;
    background-image: radial-gradient(ellipse at bottom left, #013d5d 0%, rgba(0, 0, 0, 0) 50%); /* background-color: #1a1a1a; */
    color: #fff;
}

.courses h1 {
    text-align: left;
    margin-bottom: 30px;
    font-size: 2.5rem;
}

.courses-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: space-between;
}

.course-item {
    background-color: #333;
    padding: 20px;
    border-radius: 8px;
    width: 250px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.course-item h3 {
    color: #ffa500;
    margin-bottom: 10px;
}

.course-item p {
    color: #ccc;
}

